[gd_scene load_steps=2 format=3 uid="uid://ckhfmynaavo4m"]

[ext_resource type="Script" path="res://res/scripts/menus/MainMenu.gd" id="1_uqo7g"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqo7g")

[node name="VBoxContainerGeneral" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Top" type="Control" parent="VBoxContainerGeneral"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 30.0

[node name="Label" type="Label" parent="VBoxContainerGeneral/Top"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -11.5
offset_right = 106.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 128
text = "UNBOUNDED"

[node name="Bottom" type="Control" parent="VBoxContainerGeneral"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 70.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainerGeneral/Bottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsLeft" type="Control" parent="VBoxContainerGeneral/Bottom/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 40.0

[node name="VBoxContainerButtons" type="VBoxContainer" parent="VBoxContainerGeneral/Bottom/HBoxContainer/ButtonsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -79.0
offset_right = 175.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Play" type="Button" parent="VBoxContainerGeneral/Bottom/HBoxContainer/ButtonsLeft/VBoxContainerButtons"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "PLAY"

[node name="Button2" type="Button" parent="VBoxContainerGeneral/Bottom/HBoxContainer/ButtonsLeft/VBoxContainerButtons"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "TEST"

[node name="Quit" type="Button" parent="VBoxContainerGeneral/Bottom/HBoxContainer/ButtonsLeft/VBoxContainerButtons"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "QUIT"

[node name="PicRight" type="Control" parent="VBoxContainerGeneral/Bottom/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 60.0

[connection signal="pressed" from="VBoxContainerGeneral/Bottom/HBoxContainer/ButtonsLeft/VBoxContainerButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainerGeneral/Bottom/HBoxContainer/ButtonsLeft/VBoxContainerButtons/Quit" to="." method="_on_quit_pressed"]
